work done on 13

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.analysis.extraPaths": [
         "./repositories/GPTQ-for-LLaMa-cuda"
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "off"
 }
